--- a/templates/details.html
+++ b/templates/details.html
@@ -10,7 +10,26 @@
 
 <h2>{{user.first_name}} {{user.last_name}}</h2>
 
-<button id="edit-user-btn">Edit</button>
-<button id="delete-user-btn">Delete</button>
+<form>
+    <button formaction="/users/{{user.id}}/edit" formmethod="GET" id="edit-user-btn">Edit</button>
+    <button formaction="/users/{{user.id}}/delete" formmethod="POST" id="delete-user-btn">Delete</button>
+</form>
+
+<h3>Posts</h3>
+
+{% if posts %}
+<ul>
+    {% for post in posts %}
+    <li><a href="/posts/{{post.id}}">{{post.title}}</a></li>
+    {% endfor %}
+</ul>
+{% else %}
+<p>No Posts.</p>
+{% endif %}
+
+
+<form action="/users/{{user.id}}/posts/new">
+    <button id="add-post-btn">Add Post</button>
+</form>
 
 {% endblock %}
