--- a/templates/edit-user-form.html
+++ b/templates/edit-user-form.html
@@ -9,11 +9,11 @@
 <h1>Edit User:</h1>
 
 <form id="edit-user-form" action="/users/{{user.id}}/edit" method="POST">
-    <p>First Name: <input name="First" type="text" placeholder="{{user.first_name}}"></p>
-    <p>Last Name: <input name="Last" type="text" placeholder="{{user.last_name}}"></p>
-    <p>Image URL: <input name="image" type="url" placeholder="{{user.image_url}}"></p>
-    <button id="cancel-btn"><a href="/users/{{user.id}}">Cancel</a></button>
-    <button id="save-changes-btn">Save</button>
+    <p>First Name: <input name="first" type="text" value="{{user.first_name}}"></p>
+    <p>Last Name: <input name="last" type="text" value="{{user.last_name}}"></p>
+    <p>Image URL: <input name="image" type="url" value="{{user.image_url}}"></p>
+    <a id="cancel-btn" href="/users/{{user.id}}">Cancel</a>
+    <button type="submit" id="save-changes-btn">Save</button>
 </form>
 
 {% endblock %}
