--- a/templates/listing.html
+++ b/templates/listing.html
@@ -17,11 +17,11 @@
 
     <ul>
         {% for user in users %}
-            <li><a href="/users/{{user.id}}">{{user.name}}</a></li>
+            <li><a href="/users/{{user.id}}">{{user.first_name}} {{user.last_name}}</a></li>
         {% endfor %}
     </ul>
 
-    <button id="add-user-btn">Add New User</button>
+    <button id="add-user-btn"><a href="/users/new">Add New User</a></button>
 
     {% endblock %}
 </body>
