--- a/templates/new-user-form.html
+++ b/templates/new-user-form.html
@@ -12,7 +12,7 @@
     <p>First Name: <input name="first" type="text" placeholder="Enter first name"></p>
     <p>Last Name: <input name="last" type="text" placeholder="Enter last name"></p>
     <p>Image URL: <input name="image" type="url" placeholder="Enter image URL"></p>
-    <button id="submit-new-user-btn">Add User!</button>
+    <button type="submit" id="submit-new-user-btn">Add User!</button>
 </form>
 
 {% endblock %}
