--- a/templates/listing.html
+++ b/templates/listing.html
@@ -23,6 +23,9 @@
 
     <button id="add-user-btn"><a href="/users/new">Add New User</a></button>
 
+    <button><a href="/tags">Explore Tags</a></button>
     {% endblock %}
+
+    <button><a href="/users">Home Page</a></button>
 </body>
 </html>
