--- a/templates/edit-post-form.html
+++ b/templates/edit-post-form.html
@@ -12,6 +12,14 @@
     <p>Title: <input name="title" type="text" value="{{post.title}}"></p>
     <p>Content: <input name="content" type="text" value="{{post.content}}"></p>
     
+    {% if tags %}
+        {% for tag in tags %}
+            <p><input name="tag" value="{{tag.id}}" type="checkbox"{% if tag in post.tags %}checked{% endif %}> {{tag.name}}</p>
+        {% endfor %}
+    {% else %}
+        <p>No tags.</p>
+    {% endif%}
+
     <a id="cancel-edit-post-btn" href="/posts/{{post.id}}">Cancel</a>
     <Button type="submit" id="submit-new-post-btn">Edit</Button>
 </form>
